<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlidingApplication</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_name">Первый фрагмент</string>
    <string name="second_fragment_name">Второй фрагмент</string>
    <string name="large_text">Lorem ipsum dolor sit amet. Iure reprehenderit, qui blanditiis praesentium voluptatum deleniti. Modi tempora incidunt, ut et harum quidem rerum. Similique sunt in ea voluptate velit esse, quam nihil molestiae. Ullam corporis suscipit laboriosam, nisi ut perspiciatis. Perspiciatis, unde omnis dolor repellendus quod maxime placeat, facere possimus. Laboriosam, nisi ut et quasi architecto beatae vitae dicta sunt, explicabo placeat. Esse, quam nihil impedit, quo voluptas. Consequatur aut rerum facilis est eligendi optio. Corrupti, quos dolores eos. Nihil molestiae consequatur, vel eum iure reprehenderit. Nihil impedit, quo voluptas sit, aspernatur aut fugit, sed quia non numquam. Quo voluptas nulla vero eos et voluptates repudiandae sint. Totam rem aperiam eaque ipsa, quae ab illo inventore. Illo inventore veritatis et quas molestias excepturi sint, obcaecati cupiditate. Officiis debitis aut reiciendis voluptatibus maiores alias consequatur. Adipisci velit, sed quia dolor sit, amet consectetur. Impedit, quo voluptas nulla vero eos et accusamus et iusto odio dignissimos. Aliquid ex ea commodi autem quibusdam et harum quidem rerum. Impedit, quo voluptas sit, amet, consectetur adipisci. Soluta nobis est eligendi optio, cumque nihil molestiae. Quas molestias excepturi sint, obcaecati cupiditate non numquam eius modi.Lorem ipsum dolor sit amet. Iure reprehenderit, qui blanditiis praesentium voluptatum deleniti. Modi tempora incidunt, ut et harum quidem rerum. Similique sunt in ea voluptate velit esse, quam nihil molestiae. Ullam corporis suscipit laboriosam, nisi ut perspiciatis. Perspiciatis, unde omnis dolor repellendus quod maxime placeat, facere possimus. Laboriosam, nisi ut et quasi architecto beatae vitae dicta sunt, explicabo placeat. Esse, quam nihil impedit, quo voluptas. Consequatur aut rerum facilis est eligendi optio. Corrupti, quos dolores eos. Nihil molestiae consequatur, vel eum iure reprehenderit. Nihil impedit, quo voluptas sit, aspernatur aut fugit, sed quia non numquam. Quo voluptas nulla vero eos et voluptates repudiandae sint. Totam rem aperiam eaque ipsa, quae ab illo inventore. Illo inventore veritatis et quas molestias excepturi sint, obcaecati cupiditate. Officiis debitis aut reiciendis voluptatibus maiores alias consequatur. Adipisci velit, sed quia dolor sit, amet consectetur. Impedit, quo voluptas nulla vero eos et accusamus et iusto odio dignissimos. Aliquid ex ea commodi autem quibusdam et harum quidem rerum. Impedit, quo voluptas sit, amet, consectetur adipisci. Soluta nobis est eligendi optio, cumque nihil molestiae. Quas molestias excepturi sint, obcaecati cupiditate non numquam eius modi.Lorem ipsum dolor sit amet. Iure reprehenderit, qui blanditiis praesentium voluptatum deleniti. Modi tempora incidunt, ut et harum quidem rerum. Similique sunt in ea voluptate velit esse, quam nihil molestiae. Ullam corporis suscipit laboriosam, nisi ut perspiciatis. Perspiciatis, unde omnis dolor repellendus quod maxime placeat, facere possimus. Laboriosam, nisi ut et quasi architecto beatae vitae dicta sunt, explicabo placeat. Esse, quam nihil impedit, quo voluptas. Consequatur aut rerum facilis est eligendi optio. Corrupti, quos dolores eos. Nihil molestiae consequatur, vel eum iure reprehenderit. Nihil impedit, quo voluptas sit, aspernatur aut fugit, sed quia non numquam. Quo voluptas nulla vero eos et voluptates repudiandae sint. Totam rem aperiam eaque ipsa, quae ab illo inventore. Illo inventore veritatis et quas molestias excepturi sint, obcaecati cupiditate. Officiis debitis aut reiciendis voluptatibus maiores alias consequatur. Adipisci velit, sed quia dolor sit, amet consectetur. Impedit, quo voluptas nulla vero eos et accusamus et iusto odio dignissimos. Aliquid ex ea commodi autem quibusdam et harum quidem rerum. Impedit, quo voluptas sit, amet, consectetur adipisci. Soluta nobis est eligendi optio, cumque nihil molestiae. Quas molestias excepturi sint, obcaecati cupiditate non numquam eius modi.</string>
    <string name="callmenu"><![CDATA[<- ВЫЗОВ МЕНЮ!]]></string>

    <string name="header_title">Header</string>
    <string name="footer_title">Footer</string>
    <string name="button_text">Test</string>

    <string name="menu_category_name_japon">Японская кухня</string>
    <string name="menu_subcotegory_name_japon_sashimi">Сашими</string>
    <string name="menu_subcotegory_name_japon_sweetrolls">Сладкие роллы</string>
    <string name="menu_subcotegory_name_japon_salads">Салаты</string>
    <string name="menu_subcotegory_name_japon_sets">Сеты</string>
    <string name="menu_subcotegory_name_japon_hotdishes">Горячие блюда</string>
    <string name="menu_subcotegory_name_japon_rolls">Роллы</string>
    <string name="menu_subcotegory_name_japon_sushi">Суши</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_name">Денис</string>
    <string name="order_phone">+7 (987) 792 49 31</string>
    <string name="order_email">yakot93@gmail.com</string>
    <string name="order_street">Улица *</string>
    <string name="order_house">Дом *</string>
    <string name="order_apartament">1</string>
    <string name="about_text">
            \t  \t   Приглашаем Вас окунуться в мир восхетительных блюд Японской и Восточной кухни!\n
        \n  \t  \t   DOCTABKA MIX - это служба доставки, в основе которой заложены высокие стандарты качества приготовленных блюд и предоставление удобного сервиса каждому клиенту.\n
        \n  \t  \t   Благодоря усилиям профессиональный шеф поворов, качество наших блюд остаётся на самом высоком уровне. На кухне мы используем только свежие и качественные продукты, а все заказы достовляется в специальных серцифицированных пищевых контейнерах.
    </string>
    <string name="button_signup">Зарегистрироваться</string>
    <string name="label_signup">РЕГИСТРАЦИЯ</string>
    <string name="font_GothaProReg">fonts/GothaProReg.otf</string>
    <string name="hint_name">Имя</string>
    <string name="hint_phone">Телефон</string>
    <string name="font_GothaProLig">fonts/GothaProLig.otf</string>
    <string name="button_signin">Войти в аккаунт</string>
    <string name="font_GothaProMed">fonts/GothaProMed.otf</string>
    <string name="personal_area">Личный кабинет</string>
    <string name="personal_data">Персональные данные</string>
    <string name="example_name">Денис</string>
    <string name="hint_email">Email</string>
    <string name="example_email">yakot93@gmail.com</string>
    <string name="example_phone">+79877924931</string>
    <string name="label_security">Безопасность и пароль</string>
    <string name="old_pass">Старый пароль</string>
    <string name="hint_new_pass">Новый пароль</string>
    <string name="hint_repeet_pass">Повторите пароль</string>
    <string name="label_street">Улица</string>
    <string name="label_house">Дом</string>
    <string name="label_apartment">Квартира</string>
    <string name="but_save_change">Сохранить изменения</string>
    <string name="label_added_points">Баллов начислено</string>
    <string name="label_sum">Сумма заказа</string>
    <string name="label_history_trasaction">История транзакций</string>
    <string name="hint_birthday">День рождения</string>
    <string name="label_signin">АВТОРИЗАЦИЯ</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_password_new">Придумайте пароль</string>
    <string name="msg_signin">Авторизация...</string>
    <string name="msg_signup">Регистрация...</string>
    <string name="label_address">Адрес доставки</string>
    <string name="msg_update">Обновление профиля</string>
    <string name="msg_auth_bed">Неверный email или пароль</string>
    <string name="msg_login_fail">Email или пароль не верны</string>
    <string name="preference_file_name">preference</string>
    <string name="token_key">token_key</string>
    <string name="hint_search">Поиск...</string>
    <string name="title_delivery">Доставка</string>
    <string name="title_pickup">Самовывоз</string>
    <string name="desc_logo">logo</string>
    <string name="desc_back">desc_back</string>
    <string name="button_buy">Оформить за</string>
    <string name="label_order_name">Имя *</string>
    <string name="label_delivery_address">Адрес доставки</string>
    <string name="label_time">Время приготовления</string>
    <string name="label_now">Как можно скорее</string>
    <string name="label_at_time">Ко времени</string>
    <string name="label_payment">Способ оплаты</string>
    <string name="label_cash">Наличный рассчет</string>
    <string name="label_card">Безналичный рассчет</string>
    <string name="label_points">Баллами</string>
    <string name="label_enter_points">Введите баллы для оплаты</string>
    <string name="example_points_min">0</string>
    <string name="example_points_max">1850</string>
    <string name="label_enter_cash">Сдача с</string>
    <string name="msg_order_send">Заказ отправлен!</string>
    <string name="msg_order_sending">Отправка заказа...</string>
    <string name="msg_order_error">Ошибка!!!</string>
    <string name="msg_invalid_time">Заказ к определенному времени действует с 12:00 до 00:00</string>
    <string name="int_null">0</string>
    <string name="user_id_key">user_id_key</string>

    <string name="value_price" formatted="false">%d руб.</string>
    <string name="value_price_cur" formatted="false">%d Я</string>
    <string name="value_weight" formatted="false">%d гр.</string>
    <string name="value_ball" formatted="false">%d руб.</string>
    <string name="value_buy" formatted="false">Оформить за %d руб.</string>

    <string name="transaction_point">Начисленно</string>
    <string name="transaction_shot">Списанно</string>

</resources>
