<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="25sp"
        android:paddingRight="25dp"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="120sp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_peaple"
            tools:ignore="MissingPrefix"/>

        <ru.dostavkamix.denis.dostavkamix.Custom.TextViewPlus
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:gravity="center"
            android:text="Теперь вы можете накапливать баллы и тратить их при следующем заказе!
Для этого нужно всего лишь зарегистрироваться."
            app:customFont="@string/font_GothaProLig"
            android:lineSpacingExtra="4sp"
            android:textSize="16sp" />

        <ru.dostavkamix.denis.dostavkamix.Custom.TextViewPlus
            android:id="@+id/signup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_signup"
            app:customFont="@string/font_GothaProLig"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="36px"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/signup_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/hint_name"
                android:textSize="26px"
                android:gravity="center"
                android:textColor="@color/md_white_1000"
                android:singleLine="true"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/hint_phone"
                android:textSize="26px"
                android:gravity="center"
                android:textColor="@color/md_white_1000"
                android:singleLine="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="Придумайте пароль"
                android:textSize="26px"
                android:gravity="center"
                android:textColor="@color/md_white_1000"
                android:singleLine="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="Повторите пароль"
                android:textSize="26px"
                android:gravity="center"
                android:textColor="@color/md_white_1000"
                android:singleLine="true"
                />
        </LinearLayout>

        <ru.dostavkamix.denis.dostavkamix.Custom.TextViewPlus
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_call"
            android:gravity="center"

            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/button_signup"

            android:textColor="@color/base_color"
            android:textSize="36px"

            app:customFont="@string/font_GothaProReg"
            />

        <ru.dostavkamix.denis.dostavkamix.Custom.TextViewPlus
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:textColor="@color/accent_color"
            app:customFont="@string/font_GothaProMed"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>