<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"

        android:id="@+id/remove_lay"
        android:visibility="gone">

        <ru.dostavkamix.denis.dostavkamix.Custom.TextViewPlus
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:layout_marginTop="8sp"
            android:text="удалить"
            android:textColor="@color/accent_color"
            android:layout_gravity="center_vertical|right"
            android:gravity="center"
            android:layout_marginRight="10sp"
            app:customFont="@string/font_GothaProReg"
            android:background="@drawable/remove_rounded_background"/>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/street_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_content_card"
        android:background="@color/toolbar_background_color"
        android:orientation="vertical">

        <ru.dostavkamix.denis.dostavkamix.Custom.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left_title_card"
            android:text="@string/label_street"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/size_title_card"
            app:customFont="@string/font_GothaProReg" />

        <EditText
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_right_content_card"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="text"
            android:minWidth="@dimen/minWidth_edit"
            android:textColor="@color/color_hint"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/margin_left_title_card"
            android:background="@color/base_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/number_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_content_card"
        android:background="@color/toolbar_background_color"
        android:orientation="vertical">

        <ru.dostavkamix.denis.dostavkamix.Custom.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left_title_card"
            android:text="@string/label_house"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/size_title_card"
            app:customFont="@string/font_GothaProReg" />

        <EditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="10sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_right_content_card"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="text"
            android:textColor="@color/color_hint"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/margin_left_title_card"
            android:background="@color/base_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/apartment_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_content_card"
        android:background="@color/toolbar_background_color"
        android:orientation="vertical">

        <ru.dostavkamix.denis.dostavkamix.Custom.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left_title_card"
            android:text="@string/label_apartment"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/size_title_card"
            app:customFont="@string/font_GothaProReg" />

        <EditText
            android:id="@+id/apartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="10sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_right_content_card"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="number"
            android:textColor="@color/color_hint"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/margin_left_title_card"
            android:background="@color/base_color" />
    </RelativeLayout>
</LinearLayout>